fix: Fix for Candid Text
Candid Text is not showing when the header is hidden

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,8 @@ body {
   margin-bottom: 2rem;
 }
 .hide {
-  display: none !important;
+  // display: none !important;
+  display: none;  
 }
 .hover {
   cursor: pointer;
